Fix JDK8 List init